--- a/style/index.css
+++ b/style/index.css
@@ -1,28 +1,80 @@
-/*styling*/
 
-/* body{
-    wi
+/*Styling*/
+
+html, body{
+    background-position: center;
+    background: linear-gradient(to bottom, #2a2a3b, #4a3a63);
+    background-size: cover;
+    background-attachment: fixed;
+    
+    color: white;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    padding: 20px;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 30px;
+}
+.header a {
+    color: white;
+    text-decoration: none;
+    margin: 0 15px;
+}
+.main-content {
+    max-width: 800px;
+    margin: auto;
+    text-align: center;
+}
+.main-content h1 {
+    font-size: 3em;
+    font-weight: bold;
+}
+.cta-buttons {
+    margin-top: 20px;
+}
+.cta-buttons a {
+    display: inline-block;
+    margin: 10px;
+    padding: 15px 30px;
+    border-radius: 5px;
+    font-size: 1.2em;
+    text-decoration: none;
+}
+.btn-primary {
+    background-color: #7289da;
+    color: white;
+}
+.btn-secondary {
+    background-color: #565b76;
+    color: white;
+}
+.carousel-container {
+    position: relative; 
+    display: flex;
+    width: 30%;
+    margin: 40px auto;
+    text-align: center;
+    margin-top: 200px;
+}
+#productCarousel {
+    max-width: 80%  ;
+    margin: auto;
 }
 
-nav{
-
-} */
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+.carousel-control.left, 
+.carousel-control.right {
+    top: 50%;
+    transform: translateY(-50%);
 }
 
-li {
-    display: inline;
-    float: right;
-    border-radius: 10px;
-}
-
-a {
+.carousel-inner img {
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+    height: auto;
     display: block;
-    padding: 8px;
-    background-color: #dddddd;
     border-radius: 10px;
 }
