--- a/style/signIn.css
+++ b/style/signIn.css
@@ -15,7 +15,7 @@ body {
     background: linear-gradient(to bottom, #1e1e2d, #3b3b5f, #5a3d7a);
 }
 
-/*navbar*/
+/* Navbar */
 .navbar {
     width: 100%;
     padding: 15px;
@@ -62,6 +62,7 @@ body {
 
 /* Login Box */
 .login-box {
+    position: relative;
     background: rgba(255, 255, 255, 0.15);
     padding: 20px;
     border-radius: 12px;
@@ -136,4 +137,17 @@ input::placeholder {
 
 .login-btn:hover {
     background-color: rgba(255, 255, 255, 0.5);
+}
+
+/* Error Message */
+.error-message {
+    color: rgb(195, 54, 73);
+    font-size: 14px;
+    margin-top: 10px;
+    text-align: center;
+    background-color: rgba(195, 54, 73, 0.1);
+    border: 1px solid rgb(195, 54, 73);
+    border-radius: 5px;
+    padding: 10px;
+
 }
