--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -8,7 +8,7 @@
 
 /* Background */
 body {
-    background-color: #f4f4f4;
+    background: linear-gradient(to bottom, #4e4e4e, #515151, #4f4f4f, #5a3d7a);
     color: #333;
     display: flex;
     justify-content: center;
@@ -37,6 +37,7 @@ body {
     font-weight: bold;
     text-decoration: none;
     color: white;
+    font-style: italic;
 }
 
 .nav-link {
@@ -55,7 +56,7 @@ body {
 .welcome-message {
     font-size: 28px;
     font-weight: bold;
-    color: #333;
+    color: #dfdfdf;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -66,6 +67,7 @@ body {
     width: 80%;
     max-width: 1200px;
     margin-top: 80px; /* Adjust for the fixed navbar */
+    color: white;
 }
 
 /* Title */
@@ -109,6 +111,6 @@ body {
 
 .event-description {
     font-size: 14px;
-    color: #555;
+    color: #e0e0e0;
     margin-top: 10px;
 }
