--- a/style/Event.css
+++ b/style/Event.css
@@ -1,29 +1,42 @@
 * {
+    font-family: Arial, sans-serif;
     color: white;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    
+    
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, #4e4e4e, #515151, #4f4f4f, #5a3d7a);
-    margin: 0;
-    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: linear-gradient(to bottom, #1e1e2d, #3b3b5f, #5a3d7a);
 }
 
 .navbar {
+    width: 100%;
+    padding: 15px;
     background: rgba(0, 0, 0, 0.4);
-    padding: 10px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
 }
 
 .nav-brand {
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bold;
+    text-decoration: none;
+    color: white;
+    font-style: italic;
 }
 
 .container {
-    width: 50%;
+    width: 400px;
     margin: 50px auto;
     background: rgba(255, 255, 255, 0.15);
     padding: 20px;
